Fix jumpiness in home page icon bar
Not all icons have the same hight, and this causes the home page to
jump.
Force all icons to fit in a 80x80 box.

--- a/public/stylesheets/app.css
+++ b/public/stylesheets/app.css
@@ -74,5 +74,7 @@
 
 .icon-slide img {
   width: 80px;
+  height: 80px;
+  object-fit: contain;
   margin: 0 10px 10px 10px;
 }
